-feature#1399: Allow 'requires' to include version against a plugin
-issue#1072: CVE-2009-4112 with regard to exploiting Data Input methods
-issue#1097: When copying template user, enable that user, also template users should be disabled by default
-issue#1174: Disable drag and drop when tree is not in edit mode
-issue#1408: Update SQL / Backtrace to use new clean_up_lines() function
-issue#1414: DSSTATS reports incorrectly that a data source does not exist
-issue#1420: Debian test suite reports issues 
-issue#1421: Fix issue when SQL had all bad modes, missing variable warning was generated
-issue#1426: Fix issue where remote poller was not using unique filenames when attempting to verify files
-issue: Move Graph removal function to Graph API
-issue: Fix issue with display_custom_error_message() causing problem with system error message handling
-feature: Make Graph and Data Source suggested naming more efficient
-feature: Make tree editing responive
-feature: Add support for DDERIVE and DCOUNTER to Cacti

1.1.37
-issue#1405: When Data Query columns are wide, they cause rendering issues
-issue#1419: CLog: preg_match can blow up log file
-issue#1420: Debian test suite reports issues 
-issue#1421: Fix issue when SQL had all bad modes, missing variable warning was generated
-issue#1426: Fix issue where remote poller was not using unique filenames when attempting to verify files
-issue#1432: Delete confirmation does not disappear
-issue: Output message timer not clearing properly on page refresh
-feature: Updated Chinese Simplified translations
-feature: Updated Dutch translations
-feature: Make LDAP errors consistent across functions
-feature: JavaScript library Chart.js updated 2.7.2 

1.1.36
-issue#934: Template names missing in graph management list
-issue#1211: CDEF and VDEF Item Edit do not use correct procedures
-issue#1250: Language support does not support localization properly
-issue#1331: Log Rotation should occur at midnight on system