@@ -617,9 +617,9 @@ function cacti_log($string, $output = false, $environ = 'CMDPHP', $level = '') {
 
 	/* format the message */
 	if ($environ == 'POLLER') {
-		$message = "$date - " . $environ . ': Poller[' . $config['poller_id'] . '] ' . $string . "\n";
+		$prefix = "$date - " . $environ . ': Poller[' . $config['poller_id'] . '] ';
 	} else {
-		$message = "$date - " . $environ . ' ' . $string . "\n";
+		$prefix = "$date - " . $environ . ' ';
 	}
 
 	/* Log to Logfile */
@@ -632,6 +632,7 @@ function cacti_log($string, $output = false, $environ = 'CMDPHP', $level = '') {
 		$fp = @fopen($logfile, 'a');
 
 		if ($fp) {
+			$message = clean_up_lines($prefix . $string) . "\n";
 			@fwrite($fp, $message);
 			fclose($fp);
 		}
